# depression-detection

./: .gitignore  _temp_s12_score3.json  pyproject.toml
.claude/: settings.json  settings.local.json
analyses/: compute_oracle_map.py  oracle_map_results.json  oracle_map_summary.md
analysis/: adhd_depression_overlap_map.json  dataset_exploration.md  depression_signal_phrases.json  depression_topic_vocabulary.json  explore_datasets.py  per_symptom_confounder_phrases.json  sentence_level_topic_validation.json  topic_dsm5_mappings.json
annotations/: annotation_summary.tsv  redsm5_sourced_examples.json  score0_shared_pool.json  symptom_01_examples.json  symptom_02_examples.json  symptom_03_examples.json  symptom_04_examples.json  symptom_05_examples.json  symptom_06_examples.json  symptom_07_examples.json  symptom_08_examples.json  symptom_09_examples.json  symptom_10_examples.json  symptom_11_examples.json  symptom_12_examples.json  symptom_13_examples.json  symptom_14_examples.json  symptom_15_examples.json  symptom_16_examples.json  symptom_17_examples.json  symptom_18_examples.json
candidates/: bdisen_confounder_pool.tsv  erisk2023_boundary_pool.tsv  erisk2025_t1_boundary_pool.tsv  extraction_summary.json  redsm5_confounder_pool.tsv  score0_pool.tsv  symptom_01_candidates.tsv  symptom_02_candidates.tsv  symptom_03_candidates.tsv  symptom_04_candidates.tsv  symptom_05_candidates.tsv  symptom_06_candidates.tsv  symptom_07_candidates.tsv  symptom_08_candidates.tsv  symptom_09_candidates.tsv  symptom_10_candidates.tsv  symptom_11_candidates.tsv  symptom_12_candidates.tsv  symptom_13_candidates.tsv  symptom_14_candidates.tsv  symptom_15_candidates.tsv  symptom_16_candidates.tsv  symptom_17_candidates.tsv  symptom_18_candidates.tsv
config/: mentalriskes.yaml  mentalriskes_task2.yaml  mentalriskes_task2_test_replay.yaml  (+13 more)
(+379 files in other folders)
