[project]
name = "hipert-adhd"
version = "0.1.0"
description = "HiPerT-ADHD: ADHD Symptom Sentence Ranking for eRisk 2026 Task 3"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "sentence-transformers>=2.6",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
hipert = "hipert.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hipert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
