[project]
name = "erisk-2026"
version = "0.1.0"
description = "eRisk 2026: Depression Detection (Task 1, 2) and ADHD Symptom Ranking (Task 3)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "sentence-transformers>=2.6",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "bertopic>=0.17.4",
    "umap-learn>=0.5.11",
    "hdbscan>=0.8.41",
    "xgboost>=2.0",
    "torch>=2.0",
    "vaderSentiment>=3.3",
    "transformers>=4.36",
    "scipy>=1.11",
    "pot>=0.9.6.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
hipert = "hipert.cli:cli"
erisk-task2 = "erisk_task2.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/hipert", "src/erisk_task1", "src/erisk_task2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
